let users with unrestricted access modify serology
